--- a/traveller/templates/traveller/profile.html
+++ b/traveller/templates/traveller/profile.html
@@ -8,6 +8,12 @@
     <p>username {{ user.username }}</p>
     <p>eamil {{ user.email }}</p>
     <p>birthday {{ traveller.birthday}}</p>
+    <p>friends:</p>
+    {% for friend in friends %}
+    <p><a href="plan/detail/{{ plan.id }}">{{ plan.title }}</a></p>
+    {% endfor %}
+
+
     <p>created plans:</p>
     {% for plan in created_plans %}
     <p><a href="plan/detail/{{ plan.id }}">{{ plan.title }}</a></p>
