--- a/plan/templates/plan/create.html
+++ b/plan/templates/plan/create.html
@@ -1,23 +1,20 @@
+{% load bootstrap3 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+{% bootstrap_messages %}
 
 <!DOCTYPE html>
 <html>
 <head>
     <title>Create your plan</title>
-    {{ form.media }}
-   <script type="text/javascript" src="/my_admin/jsi18n/"></script>
-<script type="text/javascript" src="/media/admin/js/core.js"></script>
 
-<link rel="stylesheet" type="text/css" href="/media/admin/css/forms.css"/>
-<link rel="stylesheet" type="text/css" href="/media/admin/css/base.css"/>
-<link rel="stylesheet" type="text/css" href="/media/admin/css/global.css"/>
-<link rel="stylesheet" type="text/css" href="/media/admin/css/widgets.css"/>
 </head>
 <body>
     <h1>Create</h1>
         <p>this is a creation page to be done.</p>
         <p>time format: 2014-01-20</p>
         <form action="" method="post">{% csrf_token %}
-        {{ form.as_p }}
+            {% bootstrap_form form %}
         <input type="submit" value="Submit" />
 </form>
 </body>
