--- a/Co_Trip/templates/Co_Trip/index.html
+++ b/Co_Trip/templates/Co_Trip/index.html
@@ -16,7 +16,7 @@
 
 		<!-- Bootstrap core CSS -->
 		{% load staticfiles %}
-		<link rel="stylesheet" type="text/css" href="{% static "Bootstrap/css/bootstrap.css" %}">
+		<link rel="stylesheet" type="text/css" href="{% static "external/Bootstrap/css/bootstrap.css" %}">
 
 		<!-- Custom styles -->
 		<link rel="stylesheet" type="text/css" href="">
@@ -33,8 +33,8 @@
 							<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 								<span class="sr-only">Toggle navigation</span>
 								<span class="icon-bar"></span>
-				                <span class="icon-bar"></span>
-				                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
 							</button>
 							<a class="navbar-brand" href="">Co-Trip</a>
 						</div>
@@ -42,9 +42,7 @@
 						<div class="navbar-collapse collapse">
 							<ul class="nav navbar-nav navbar-left">
 								<li class="active"><a href="">Home</a></li>
-
-                                <li><a href="plan/explore">Explorer</a></li>
-
+                <li><a href="plan/explore">Explorer</a></li>
 								<li><a href="">Help</a></li>
 							</ul>
 
@@ -73,18 +71,19 @@
 			<h1>welcome to Co-Trip</h1>
 		    <p>this is the home page for Co-Trip</p>
 		    {% if user.is_authenticated %}
-		        <p>{{ user.username }}, welcome back. You can now <a href="accounts/logout"> log out</a>.</p>
-                <p><a href="plan/create">create</a>.</p>
-                <p><a href="about">about</a>.</p>
-                <p><a href="accounts/profile">profile</a>.</p>
+	        <p>{{ user.username }}, welcome back. You can now <a href="accounts/logout"> log out</a>.</p>
+          <p><a href="plan/create">create</a>.</p>
+          <p><a href="about">about</a>.</p>
+          <p><a href="accounts/profile">profile</a>.</p>
 		    {% else %}
-		        <p>you can <a href = "accounts/login">log in</a> or <a href = "accounts/register">sign up</a></p>
+	        <p>you can <a href = "accounts/login">log in</a> or <a href = "accounts/register">sign up</a></p>
 		    {% endif %}
 		</div>
 		
 		<!-- Bootstrap core Javascript -->
 		{% load staticfiles %}
-		<script type="text/javascript" src="{% static "Bootstrap/js/bootstrap.js" %}"></script>
+		<script type="text/javascript" src="{% static "external/jQuery/jquery-1.10.2.js" %}"></script>
+		<script type="text/javascript" src="{% static "external/Bootstrap/js/bootstrap.js" %}"></script>
 	</body>
 
 </html>
