--- a/Co_Trip/templates/Co_Trip/index.html
+++ b/Co_Trip/templates/Co_Trip/index.html
@@ -75,6 +75,7 @@
           <p><a href="plan/create">create</a>.</p>
           <p><a href="about">about</a>.</p>
           <p><a href="accounts/profile">profile</a>.</p>
+          <p><a href="friend">friend</a>.</p>
 		    {% else %}
 	        <p>you can <a href = "accounts/login">log in</a> or <a href = "accounts/register">sign up</a></p>
 		    {% endif %}
