--- a/plan/templates/plan/create.html
+++ b/plan/templates/plan/create.html
@@ -1,7 +1,7 @@
-{% load bootstrap3 %}
-{% bootstrap_css %}
-{% bootstrap_javascript %}
-{% bootstrap_messages %}
+{#{% load bootstrap3 %}#}
+{#{% bootstrap_css %}#}
+{#{% bootstrap_javascript %}#}
+{#{% bootstrap_messages %}#}
 
 <!DOCTYPE html>
 <html>
@@ -14,7 +14,8 @@
         <p>this is a creation page to be done.</p>
         <p>time format: 2014-01-20</p>
         <form action="" method="post">{% csrf_token %}
-            {% bootstrap_form form %}
+{#            {% bootstrap_form form %}#}
+            {{ form.as_p }}
         <input type="submit" value="Submit" />
 </form>
 </body>
