--- a/traveller/templates/traveller/profile.html
+++ b/traveller/templates/traveller/profile.html
@@ -5,7 +5,9 @@
 </head>
 <body>
     <p>this is the profile page</p
-    <p><img src={{ avatar }}/></p>
+    <p><img src="{{ avatar }}"/></p>
+
+    <a href="upload">upload</a>
     <p>username {{ traveller.user.username }}</p>
     <p>eamil {{ traveller.email }}</p>
     <p>birthday {{ traveller.birthday}}</p>
