--- a/Co_Trip/templates/base.html
+++ b/Co_Trip/templates/base.html
@@ -58,7 +58,7 @@
           
           <ul class="nav navbar-nav navbar-right">
             <li>
-              <a href="/inbox/notifications/" class="CT-navbar-notification-indicator" data-container="body" data-toggle="tooltip" data-placement="bottom" title="You have no unread notifications." data-original-title="Tooltip on bottom">
+              <a href="/notifications/" class="CT-navbar-notification-indicator" data-container="body" data-toggle="tooltip" data-placement="bottom" title="You have no unread notifications." data-original-title="Tooltip on bottom">
                 <span class="mail-status glyphicon glyphicon-record" id="notification-circle"></span>
               </a>
             </li>
@@ -76,7 +76,7 @@
                 </li>
                 <li class="divider"></li>
                 <li>
-                  <a href="/inbox/notifications/">
+                  <a href="notifications/">
                     <span class="glyphicon glyphicon-envelope"></span> 站内消息
                   </a>
                 </li>
