--- a/django_messages/templates/django_messages/view.html
+++ b/django_messages/templates/django_messages/view.html
@@ -1,6 +1,7 @@
 {% extends "django_messages/base.html" %} 
 {% load i18n %} 
 {% load url from future %}
+{% load avatartags %}
 
 {% block content %}
 <h1>{% trans "View Message" %}</h1>
@@ -8,7 +9,7 @@
     <dt>{% trans "Subject" %}</dt>
     <dd><strong>{{ message.subject }}</strong></dd>
     <dt>{% trans "Sender" %}</dt>
-    <dd>{{ message.sender }}</dd>
+    <dd>{{ message.sender }} <img src='{% get_avatar message.sender 50 %}'></dd>
     <dt>{% trans "Date" %} </dt>
     <dd>{{ message.sent_at|date:_("DATETIME_FORMAT")}}</dd>
     <dt>{% trans "Recipient" %}</dt>
