--- a/Co_Trip/templates/base.html
+++ b/Co_Trip/templates/base.html
@@ -76,8 +76,8 @@
                 </li>
                 <li class="divider"></li>
                 <li>
-                  <a href="notifications/">
-                    <span class="glyphicon glyphicon-envelope"></span> 站内消息
+                  <a href="/messages/">
+                    <span class="glyphicon glyphicon-envelope"></span> 站内私信
                   </a>
                 </li>
                 <li class="divider"></li>
