bug fix with follower display

--- a/notifications/templates/notifications/notice.html
+++ b/notifications/templates/notifications/notice.html
@@ -10,7 +10,7 @@
       of {{ notice.target }}
     {% endif %}
   {{ notice.timesince }} ago
-    {{ notice.data }}
+      <a href="{{ notice.data.url }}">fffffff</a>
 {#  {% if notice.description == 'friend_request' %}#}
 {#      (this is a friend request)  <a href="/friend/friend/requests/">check out here</a>#}
 {#  {%  endif %}#}
