--- a/Co_Trip/templates/Co_Trip/public_index.html
+++ b/Co_Trip/templates/Co_Trip/public_index.html
@@ -123,7 +123,7 @@
 		<script type="text/javascript" src="{% static "external/Bootstrap/js/bootstrap.js" %}"></script>
 
     <!-- Custom Javascript -->
-    <script type="text/javascript" src="{% static "js/index2.2.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/p_index.js" %}"></script>
 	</body>
 
 </html>
