--- a/Co_Trip/templates/Co_Trip/public_index.html
+++ b/Co_Trip/templates/Co_Trip/public_index.html
@@ -56,7 +56,7 @@
                 <input name="username" type="text" class="form-control" placeholder="用户名" required autofocus>
                 <input name="password" type="password" class="form-control" placeholder="密码" required>
                 <button class="btn btn-info" type="submit" form="login-form">开启我的Co-Trip</button>
-                <button class="btn btn-link pull-right" type="button" id="login-button">去注册</button>
+                <button class="btn btn-link pull-right" type="button" id="signup-button">去注册</button>
               </form>
             </div>
             <div class="signup-block" style="display: none;">
@@ -69,7 +69,7 @@
                 <input name="password1" type="password" class="form-control" placeholder="密码" required>
                 <input name="password2" type="password" class="form-control" placeholder="重复密码" required>
                 <button class="btn btn-info" type="submit" form="signup-form">开启我的Co-Trip</button>
-                <button class="btn btn-link pull-right" type="button" id="signup-button">已有账号</button>
+                <button class="btn btn-link pull-right" type="button" id="login-button">已有账号</button>
               </form>
             </div>
           </div>
