--- a/Co_Trip/templates/Co_Trip/public_index.html
+++ b/Co_Trip/templates/Co_Trip/public_index.html
@@ -42,8 +42,8 @@
             <img src="{% static "imgs/Co-Trip text.png" %}" alt="text" class="logo">
           </div>
           <div class="buttons">
-            <a href="" class="btn btn-warning btn-lg btn-block">探索</a>
-            <a href="" class="btn btn-success btn-lg btn-block">关于</a>
+            <a href="/plan/explorer" class="btn btn-warning btn-lg btn-block">探索</a>
+            <a href="/about" class="btn btn-success btn-lg btn-block">关于</a>
           </div>
         </div>
         <div class="col-sm-offset-2 col-sm-6 right-side-panel">
