--- a/Co_Trip/templates/Co_Trip/public_index.html
+++ b/Co_Trip/templates/Co_Trip/public_index.html
@@ -42,7 +42,7 @@
             <img src="{% static "imgs/Co-Trip text.png" %}" alt="text" class="logo">
           </div>
           <div class="buttons">
-            <a href="/plan/explorer" class="btn btn-warning btn-lg btn-block">探索</a>
+            <a href="/plan/explore" class="btn btn-warning btn-lg btn-block">探索</a>
             <a href="/about" class="btn btn-success btn-lg btn-block">关于</a>
           </div>
         </div>
