--- a/Co_Trip/templates/base.html
+++ b/Co_Trip/templates/base.html
@@ -55,7 +55,7 @@
             </div>
             <input type="submit" class="btn btn-default" value="搜索">
           </form>
-          
+           {% if user.is_authenticated %}
           <ul class="nav navbar-nav navbar-right">
             <li>
               <a href="/notifications/" class="CT-navbar-notification-indicator" data-container="body" data-toggle="tooltip" data-placement="bottom" title="You have no unread notifications." data-original-title="Tooltip on bottom">
@@ -63,11 +63,13 @@
               </a>
             </li>
             <li class="dropdown">
+
               <a class="CT-user-profile dropdown-toggle" href="#" data-toggle="dropdown">
                 <img src="{% get_avatar user 50%}" alt="{{ user.username }}" class="avatar">
 
                 <span class="name">{{ user.username }}</span>
               </a>
+
               <ul class="dropdown-menu">
                 <li>
                   <a href="/accounts/profile/">
@@ -95,6 +97,7 @@
               </ul>
             </li>
           </ul>
+        {% endif %}
         </div>
       </div>
     </div>
