--- a/notifications/templates/notifications/notice.html
+++ b/notifications/templates/notifications/notice.html
@@ -4,16 +4,14 @@
 
   <h4>
     <i class="icon-mail{% if notice.unread %}-alt{% endif %}"></i>
-    {{ notice.actor }}
+    <a href="{{ notice.data.url }}">{{ notice.actor }}
     {{ notice.verb }}
     {% if notice.target %}
       of {{ notice.target }}
-    {% endif %}
+    {% endif %} </a>
   {{ notice.timesince }} ago
-      <a href="{{ notice.data.url }}">fffffff</a>
-{#  {% if notice.description == 'friend_request' %}#}
-{#      (this is a friend request)  <a href="/friend/friend/requests/">check out here</a>#}
-{#  {%  endif %}#}
+
+
 
   </h4>
 
