--- a/plan/templates/plan/success.html
+++ b/plan/templates/plan/success.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Plan Creation Success!</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block main_content %}
 <p>if you see this, it means you succeed</p>
-<p><a href="/plan/explore">plan list</a></p>
-</body>
-</html>
+{% endblock %}
