--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -1,28 +1,33 @@
-{% extends "registration/base.html" %}
+{% extends 'base.html' %}
 
-{% block title %}Log in{% endblock %}
 
-{% block content %}
-
-<h1>Log in</h1>
-
-{% if form.errors %}
-<p class="error">Please correct the errors below:</p>
-{% endif %}
-
-<form method="post" action="?next={{ next|default:"/" }}">
-	{% csrf_token %}
-<dl>
-<dt><label for="id_username">Username:</label>{% if form.username.errors %} <span class="error">{{ form.username.errors|join:", " }}</span>{% endif %}</dt>
-<dd>{{ form.username }}</dd>
-<dt><label for="id_password">Password:</label>{% if form.password.errors %} <span class="error">{{ form.password.errors|join:", " }}</span>{% endif %}</dt>
-<dd>{{ form.password }}</dd>
-<dt><input type="submit" value="Log in" /></dt>
-</dl>
-</form>
+{% block css_link %}
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}login.css">
 {% endblock %}
 
-{% block content-related %}
-<p>If you don't have an account, you can <a href="/accounts/register/">sign
-up</a> for one.
+
+{% block main_content %}
+
+
+		<!-- =====LOGIN===== -->
+		<div class="container">
+			<form class="form-login" role="form" method="POST" action="/accounts/login/?next=/">
+                {% csrf_token %}
+				<h2 class="form-login-heading text-center">登陆</h2>
+				<input name="username" type="text" class="form-control" placeholder="用户名" required autofocus>
+				<input name="password" type="password" class="form-control" placeholder="密码" required>
+				<label class="checkbox">
+					<input type="hidden" value="remember-me">
+				</label>
+				<button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
+			</form>
+		</div>
+
 {% endblock %}
+		<!-- jQuery core Javascript -->
+    <script type="text/javascript" src="external/jQuery/jquery-1.10.2.js"></script>
+
+    <!-- Bootstrap core Javascript -->
+    <script type="text/javascript" src="external/Bootstrap/js/bootstrap.js"></script>
+
+</html>
