--- a/django_messages/templates/django_messages/messages.html
+++ b/django_messages/templates/django_messages/messages.html
@@ -4,7 +4,7 @@
 
 {% block side_tab_bar %}
 <div>
-  <a href="" id="new" class="btn btn-danger btn-lg btn-block">
+  <a href="/messages/compose/" id="new" class="btn btn-danger btn-lg btn-block">
     新信件
   </a>
 </div>
@@ -12,7 +12,7 @@
 <ul class="nav nav-pills nav-stacked CT-sidetabbar" id="messages-tabs">
   <li class="active">
     <a href="#inbox" data-toggle="pill">
-      <span class="badge pull-right" id="inbox-badge">123</span>
+      <span class="badge pull-right" id="inbox-badge"></span>
       收件箱
     </a>
   </li><!-- /left-side-bar-column -->
@@ -39,20 +39,7 @@
 
   <div class="tab-pane fade" id="sent">
     <ul class="media-list CT-list" id="sent-list">
-      <li class="media CT-message-item">
-        <a class="pull-left" href="#">
-          <img src="imgs/avatar/zr.jpg" alt="Zhang Rui" class="media-object avatar">
-        </a>
-        <a class="close" data-dismiss="alert" href="#" aria-hidden="true">&times;</a>
-        <div class="media-body CT-message-item-content">
-          <h4 class="media-heading">
-            <a href="people/zhangrui">赶紧还钱！！</a> <small><i>To: 张睿</i></small>
-          </h4>
-          <div>
-            <small>逗比啊！昨天借我钱，该还了！</small>
-          </div>
-        </div>
-      </li>
+      
     </ul>
   </div><!-- /#sent -->
 
