add messages page

--- a/notifications/templates/notifications/base.html
+++ b/notifications/templates/notifications/base.html
@@ -2,18 +2,18 @@
 {% load i18n %}
 {% load url from future %} 
 
-{% block title %}站内信 | Co-Trip{% endblock %}
+{% block title %}站内消息 | Co-Trip{% endblock %}
 
 {% block css_link %}
-<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/messages.css">
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/notifications.css">
 {% endblock %}
 
 {% block main_content %}
 <div class="notification-nav-tabs">
   <ul class="nav nav-tabs" id="main-tabs">
-    <li class="active"><a href="#messages">Messages</a></li>
-    <li><a href="/notifications/">Notifications</a></li>
-    <li class="pull-right"><button type="button" class="btn btn-default" data-toggle="clear_notification">Mark all as read</button></li>
+    <li><a href="/messages/">Messages</a></li>
+    <li class="active"><a href="#notifications">Notifications</a></li>
+    <li class="pull-right"><a href="/notifications/mark-all-as-read" class="btn btn-default" data-toggle="clear_notification">Mark all as read</a></li>
   </ul>
 </div><!-- #main-tabs -->
 
@@ -33,5 +33,5 @@
 {% endblock %}
 
 {% block js %}
-<script type="text/javascript" src="{{ STATIC_URL }}js/messages.js"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}js/notifications.js"></script>
 {% endblock %}
