--- a/django_messages/templates/django_messages/compose.html
+++ b/django_messages/templates/django_messages/compose.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %} 
 {% load i18n %} 
+
+{% block title %}发送站内信 | Co-Trip{% endblock %}
 {% block main_content %}
 <h1>{% trans "Compose Message"%}</h1>
 <form action="" method="post">
