--- a/django_messages/templates/django_messages/base.html
+++ b/django_messages/templates/django_messages/base.html
@@ -11,8 +11,8 @@
 {% block main_content %}
 <div class="notification-nav-tabs">
   <ul class="nav nav-tabs" id="main-tabs">
-    <li class="active"><a href="#messages">Messages</a></li>
-    <li><a href="/notifications/">Notifications</a></li>
+    <li class="active"><a href="#messages">站内信</a></li>
+    <li><a href="/notifications/">消息</a></li>
     <li class="pull-right"><button type="button" class="btn btn-default" data-toggle="clear_notification">Mark all as read</button></li>
   </ul>
 </div><!-- #main-tabs -->
