--- a/notifications/templates/notifications/base.html
+++ b/notifications/templates/notifications/base.html
@@ -11,8 +11,8 @@
 {% block main_content %}
 <div class="notification-nav-tabs">
   <ul class="nav nav-tabs" id="main-tabs">
-    <li><a href="/messages/">Messages</a></li>
-    <li class="active"><a href="#notifications">Notifications</a></li>
+    <li><a href="/messages/">站内信</a></li>
+    <li class="active"><a href="#notifications">消息</a></li>
     <li class="pull-right"><a href="/notifications/mark-all-as-read" class="btn btn-default" data-toggle="clear_notification">Mark all as read</a></li>
   </ul>
 </div><!-- #main-tabs -->
