notifs & messages update

--- a/django_messages/templates/django_messages/messages.html
+++ b/django_messages/templates/django_messages/messages.html
@@ -32,7 +32,7 @@
 {% block tab_contents %}
 <div class="tab-content">
   <div class="tab-pane active fade in" id="inbox">
-    <ul class="media-list CT-list empty" id="inbox-list">
+    <ul class="media-list CT-list" id="inbox-list">
        
     </ul>
   </div><!-- /#inbox -->
