--- a/notifications/templates/notifications/base.html
+++ b/notifications/templates/notifications/base.html
@@ -13,7 +13,7 @@
   <ul class="nav nav-tabs" id="main-tabs">
     <li><a href="/messages/">站内信</a></li>
     <li class="active"><a href="#notifications">消息</a></li>
-    <li class="pull-right"><a href="/notifications/mark-all-as-read" class="btn btn-default" data-toggle="clear_notification">Mark all as read</a></li>
+    <li class="pull-right"><button type="button" class="btn btn-default" data-toggle="clear_notification">Mark all as read</button></li>
   </ul>
 </div><!-- #main-tabs -->
 
