--- a/Co_Trip/templates/base.html
+++ b/Co_Trip/templates/base.html
@@ -102,6 +102,9 @@
       </div>
     </div>
 
+    {% block header %}
+    {% endblock %}
+
     <!-- =====MAIN CONTENT===== -->
     <main class="container">
       {% block main_content %}
