--- a/Co_Trip/templates/Co_Trip/403.html
+++ b/Co_Trip/templates/Co_Trip/403.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
+{% load static %}
 
+{% load staticfiles %}
 {% block title %}出错了！{% endblock %}
 
 {% block main_content %}
