--- a/Co_Trip/templates/Co_Trip/about.html
+++ b/Co_Trip/templates/Co_Trip/about.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/about.css">
 {% endblock %}
 
-{% block header}
+{% block header %}
 <!-- =====Carousel===== -->
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
