--- a/plan/templates/plan/create_step2.html
+++ b/plan/templates/plan/create_step2.html
@@ -53,7 +53,7 @@
         <div class="col-sm-9">
           <div class="page-header">
             <div class="pull-right form-inline">
-              <button class="btn btn-danger">Add</button>
+              <button class="btn btn-danger" data-calendar-act="add  ">Add</button>
               <div class="btn-group">
                 <button class="btn btn-primary" data-calendar-nav="prev"><< Prev</button>
                 <button class="btn btn-default" data-calendar-nav="today">Today</button>
