--- a/plan/templates/plan/detail.html
+++ b/plan/templates/plan/detail.html
@@ -1,28 +1,82 @@
 {% extends "base.html" %}
-
 {% load comments %}
-{% block title %}{{ plan.title }}{% endblock %}
+{% block css_link %}
+    <!-- Bootstrap Calendar core CSS -->
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}bootstrap-calendar/css/calendar.css">
+
+    <!-- Datetimepicker core CSS -->
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}external/datetimepicker/css/bootstrap-datetimepicker.css">
+
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}create_step2.css">
+{% endblock %}
 
 {% block main_content %}
 
-<h1>{{ plan.title }}</h1>
-    <p>create_time: {{ plan.create_time }}</p>
-    <p>leaving_date: {{ plan.leaving_date }}</p>
-    <p>leaving_transportation: {{ plan.leaving_transportation }}</p>
-    <p>return_date: {{ plan.return_date }}</p>
-    <p>return_transportation: {{ plan.return_transportation }}</p>
-    <p>participants_number: {{ plan.participants_number}}</p>
-    <p>creator: {{ plan.creator.user.username}}</p>
-    <p>participants:</p>
-    {% for p in plan.participants.all %}
-        <p>{{ p }}</p>
-    {% endfor %}
-    <p><a href="/plan/explore/{{ plan.id }}/edit">edit</a></p>
+      <div class="row">
+        <div class="col-sm-3">
+          <div class="form-horizontal">
+            <div class="form-group">
+              <label class="col-sm-3 control-label">出发日期</label>
+              <div class="col-sm-9">
+                <p class="form-control-static">{{ main_plan.leaving_date.date }}</p>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="inputPassword" class="col-sm-3 control-label">目的地</label>
+              <div class="col-sm-9">
+                  {% for d in main_plan.destination_city.all %}
+                <p class="form-control-static">{{ d }}</p>
+                  {% endfor %}
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-sm-3 control-label">返回日期</label>
+              <div class="col-sm-9">
+                <p class="form-control-static">{{ main_plan.return_date.date }}</p>
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-sm-3 control-label">创建人</label>
+              <div class="col-sm-9">
+                <p class="form-control-static">{{ main_plan.creator }}</p>
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-sm-3 control-label">参与者</label>
+              <div class="col-sm-9">
+                  {% for pa in main_plan.participants.all %}
+                <p class="form-control-static">{{ pa }}</p>
+                  {% endfor %}
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-9">
+          <div class="page-header">
+            <div class="pull-right form-inline">
 
-{%   for daily_plan in plan.daily_plan_set.all %}
-    <p>hotel: {{ daily_plan.hotel }}</p>
-{% endfor %}
-    {% get_comment_list for plan as comment_list %}
+              <div class="btn-group">
+                <button class="btn btn-primary" data-calendar-nav="prev"><< Prev</button>
+                <button class="btn btn-default" data-calendar-nav="today">Today</button>
+                <button class="btn btn-primary" data-calendar-nav="next">Next >></button>
+              </div>
+              <div class="btn-group">
+                <button class="btn btn-warning" data-calendar-view="year">Year</button>
+                <button class="btn btn-warning active" data-calendar-view="month">Month</button>
+                <button class="btn btn-warning" data-calendar-view="week">Week</button>
+                <button class="btn btn-warning" data-calendar-view="day">Day</button>
+              </div>
+            </div>
+
+            <h3></h3>
+            <small>To see example with events navigate to march 2013</small>
+          </div>
+
+          <div id="calendar"></div>
+        </div>
+      </div>
+
+    {% get_comment_list for main_plan as comment_list %}
 {% for comment in comment_list %}
     <p>{{ comment }}</p>
 {% endfor %}
@@ -30,7 +84,7 @@
 
 
 {% if user.is_authenticated %}
-    {% get_comment_form for plan as form %}
+    {% get_comment_form for main_plan as form %}
     <form action="{% comment_form_target %}" method="POST">
     {% csrf_token %}
 
@@ -42,11 +96,53 @@
   {{ form.security_hash }}
   <span style="display: none;">{{ form.honeypot }}</span>
 
-    <input type="hidden" name="next" value="{% url 'plan_detail' plan.id %}" />
+    <input type="hidden" name="next" value="{% url 'plan_detail' main_plan.id %}" />
     <input type="submit" value="Add comment" id="id_submit" />
     </form>
+
 {% else %}
     <p>Please <a href="{% url 'auth_login' %}">log in</a> to leave a comment.</p>
 {% endif %}
+      <div class="modal fade" id="events-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+              <h4 class="modal-title">Event</h4>
+            </div>
+            <div class="modal-body" style="height: 400px">
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+ {% endblock %}
+
+{% block js %}
+    <script type="text/javascript" src="{{ STATIC_URL }}external/datetimepicker/js/bootstrap-datetimepicker.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}external/datetimepicker/js/locales/bootstrap-datetimepicker.zh-CN.js" charset="UTF-8"></script>
+
+     <!-- Custom Javascript -->
+    <script type="text/javascript" src="{{ STATIC_URL }}create_step2.js"></script>
+    <!-- Bootstrap Calendar components Javascript -->
+    <script type="text/javascript" src="{{ STATIC_URL }}bootstrap-calendar/components/underscore/underscore.js"></script>
+
+
+
+    <!-- Bootstrap Calendar core Javascript -->
+    <script type="text/javascript" src="{{ STATIC_URL }}bootstrap-calendar/components/jstimezonedetect/jstz.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}bootstrap-calendar/js/language/zh-CN.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}bootstrap-calendar/js/calendar.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}bootstrap-calendar/js/app.js"></script>
+
+
+
 
 {% endblock %}
+
+
+
