--- a/plan/templates/plan/detail.html
+++ b/plan/templates/plan/detail.html
@@ -12,97 +12,96 @@
 
 {% block main_content %}
 
-      <div class="row">
-        <div class="col-sm-3">
-          <div class="form-horizontal">
-            <div class="form-group">
-              <label class="col-sm-3 control-label">出发日期</label>
-              <div class="col-sm-9">
-                <p class="form-control-static">{{ main_plan.leaving_date.date }}</p>
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="inputPassword" class="col-sm-3 control-label">目的地</label>
-              <div class="col-sm-9">
-                  {% for d in main_plan.destination_city.all %}
-                <p class="form-control-static">{{ d }}</p>
-                  {% endfor %}
-              </div>
-            </div>
-            <div class="form-group">
-              <label class="col-sm-3 control-label">返回日期</label>
-              <div class="col-sm-9">
-                <p class="form-control-static">{{ main_plan.return_date.date }}</p>
-              </div>
-            </div>
-            <div class="form-group">
-              <label class="col-sm-3 control-label">创建人</label>
-              <div class="col-sm-9">
-                <p class="form-control-static">{{ main_plan.creator }}</p>
-              </div>
-            </div>
-            <div class="form-group">
-              <label class="col-sm-3 control-label">参与者</label>
-              <div class="col-sm-9">
-                  {% for pa in main_plan.participants.all %}
-                <p class="form-control-static">{{ pa }}</p>
-                  {% endfor %}
-              </div>
+    <div class="row">
+      <div class="col-sm-3">
+        <div class="form-horizontal">
+          <div class="form-group">
+            <label class="col-sm-3 control-label">出发日期</label>
+            <div class="col-sm-9">
+              <p class="form-control-static">{{ main_plan.leaving_date.date }}</p>
             </div>
           </div>
-        </div>
-        <div class="col-sm-9">
-          <div class="page-header">
-            <div class="pull-right form-inline">
-
-              <div class="btn-group">
-                <button class="btn btn-primary" data-calendar-nav="prev"><< Prev</button>
-                <button class="btn btn-default" data-calendar-nav="today">Today</button>
-                <button class="btn btn-primary" data-calendar-nav="next">Next >></button>
-              </div>
-              <div class="btn-group">
-                <button class="btn btn-warning" data-calendar-view="year">Year</button>
-                <button class="btn btn-warning active" data-calendar-view="month">Month</button>
-                <button class="btn btn-warning" data-calendar-view="week">Week</button>
-                <button class="btn btn-warning" data-calendar-view="day">Day</button>
-              </div>
+          <div class="form-group">
+            <label for="inputPassword" class="col-sm-3 control-label">目的地</label>
+            <div class="col-sm-9">
+                {% for d in main_plan.destination_city.all %}
+              <p class="form-control-static">{{ d }}</p>
+                {% endfor %}
             </div>
-
-            <h3></h3>
-            <small>To see example with events navigate to march 2013</small>
           </div>
-
-          <div id="calendar"></div>
+          <div class="form-group">
+            <label class="col-sm-3 control-label">返回日期</label>
+            <div class="col-sm-9">
+              <p class="form-control-static">{{ main_plan.return_date.date }}</p>
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-3 control-label">创建人</label>
+            <div class="col-sm-9">
+              <p class="form-control-static">{{ main_plan.creator }}</p>
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-3 control-label">参与者</label>
+            <div class="col-sm-9">
+                {% for pa in main_plan.participants.all %}
+              <p class="form-control-static">{{ pa }}</p>
+                {% endfor %}
+            </div>
+          </div>
         </div>
       </div>
+      <div class="col-sm-9">
+        <div class="page-header">
+          <div class="pull-right form-inline">
+
+            <div class="btn-group">
+              <button class="btn btn-primary" data-calendar-nav="prev"><< Prev</button>
+              <button class="btn btn-default" data-calendar-nav="today">Today</button>
+              <button class="btn btn-primary" data-calendar-nav="next">Next >></button>
+            </div>
+            <div class="btn-group">
+              <button class="btn btn-warning" data-calendar-view="year">Year</button>
+              <button class="btn btn-warning active" data-calendar-view="month">Month</button>
+              <button class="btn btn-warning" data-calendar-view="week">Week</button>
+              <button class="btn btn-warning" data-calendar-view="day">Day</button>
+            </div>
+          </div>
+
+          <h3></h3>
+          <small>To see example with events navigate to march 2013</small>
+        </div>
+
+        <div id="calendar"></div>
+      </div>
+    </div>
 
     {% get_comment_list for main_plan as comment_list %}
-{% for comment in comment_list %}
+    {% for comment in comment_list %}
     <p>{{ comment }}</p>
-{% endfor %}
+    {% endfor %}
 
+    {% if user.is_authenticated %}
+      {% get_comment_form for main_plan as form %}
+      <form action="{% comment_form_target %}" class="form" method="POST">
+        {% csrf_token %}
+        <div class="form-group">
+          <label for="id_comment">Comment: </label>
+          <textarea cols="40" id="id_comment" name="comment" class="form-control" rows="10" placeholder="此处输入你的"></textarea>
+        </div>
+        {{ form.content_type }}
+        {{ form.object_pk }}
+        {{ form.timestamp }}
+        {{ form.security_hash }}
+        <span style="display: none;">{{ form.honeypot }}</span>
+        <input type="hidden" name="next" value="{% url 'plan_detail' main_plan.id %}" />
+        <input type="submit" value="Add comment" id="id_submit"/>
+      </form>
 
-
-{% if user.is_authenticated %}
-    {% get_comment_form for main_plan as form %}
-    <form action="{% comment_form_target %}" method="POST">
-    {% csrf_token %}
-
-  <p><label for="id_comment">Comment: </label>{{ form.comment }}</p>
-
-  {{ form.content_type }}
-  {{ form.object_pk }}
-  {{ form.timestamp }}
-  {{ form.security_hash }}
-  <span style="display: none;">{{ form.honeypot }}</span>
-
-    <input type="hidden" name="next" value="{% url 'plan_detail' main_plan.id %}" />
-    <input type="submit" value="Add comment" id="id_submit" />
-    </form>
-
-{% else %}
-    <p>Please <a href="{% url 'auth_login' %}">log in</a> to leave a comment.</p>
-{% endif %}
+    {% else %}
+      <div class="alert alert-warning">Please <a href="{% url 'auth_login' %}">log in</a> to leave a comment.</div>
+    {% endif %}
+    
       <div class="modal fade" id="events-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
