--- a/plan/templates/plan/create_step1.html
+++ b/plan/templates/plan/create_step1.html
@@ -184,7 +184,7 @@
     <!-- Form Validator core CSS -->
     <script type="text/javascript" src="{{ STATIC_URL }}external/bootstrapvalidator/js/bootstrapValidator.js"></script>
     <!-- Custom Javascript -->
-    <script type="text/javascript" src="{{ STATIC_URL }}/create_step1.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}create_step1.js"></script>
 
 {% endblock %}
 
