--- a/plan/templates/plan/detail.html
+++ b/plan/templates/plan/detail.html
@@ -78,7 +78,15 @@
 
     {% get_comment_list for main_plan as comment_list %}
     {% for comment in comment_list %}
-    <p>{{ comment }}</p>
+    <div class="media">
+      <a class="pull-left" href="#">
+        <img class="media-object" src="..." alt="...">
+      </a>
+      <div class="media-body">
+        <h4 class="media-heading"></h4>
+        {{ comment }}
+      </div>
+    </div>
     {% endfor %}
 
     {% if user.is_authenticated %}
@@ -95,13 +103,13 @@
         {{ form.security_hash }}
         <span style="display: none;">{{ form.honeypot }}</span>
         <input type="hidden" name="next" value="{% url 'plan_detail' main_plan.id %}" />
-        <input type="submit" value="Add comment" id="id_submit"/>
+        <input type="submit" class="btn btn-default" value="Add comment" id="id_submit"/>
       </form>
 
     {% else %}
       <div class="alert alert-warning">Please <a href="{% url 'auth_login' %}">log in</a> to leave a comment.</div>
     {% endif %}
-    
+
       <div class="modal fade" id="events-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
